--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,10 @@ section.section {
 #testimonials{	
 	background-image: url(../img/parallax/3.jpg);
 }
+#section-contact{
+	background-image: url(../img/parallax/2.jpg);
+}
+
 /*===========================
   --- Header & menu ----
 =========================== */
